src/App.css
html {
}

body {
  background-color: #bbb;
}

h3 {
  margin-top: 30px;
  margin-bottom: 10px;
}

.Header {
  background-color: #00BCD4;
  color: white;
  position: fixed;
  width: 100%;
  height: 160px;
  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.3);
  top: 0;
  left: 300px;
  z-index: 1;
}

.Header > .menu-icon {
  display: none;
}

.Header > h1 {
  padding-left: 105px;
  font-size: 2.5em;
  margin-top: 60px;
	white-space: nowrap;
}

.Body {
  background-color: #dddede;
  position: relative;
  margin-left: 300px;
  margin-top: 160px;
  margin-bottom: 160px;
  padding: 5px;
  z-index: 3;
  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
}

.Body a {
  text-decoration: none;
  color: #0000bb;
}

.Card {
  padding: 30px 70px;
  margin: 30px;
  background-color: #fff;
  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
  border-radius: 2dp;
  text-align: justify;
}

.Card p {
  font-size: 0.85rem;
  line-height: 30px;
  margin-top: 10px;
  margin-bottom: 30px;
}

.Drawer {
  background-color: #fff;
  position: fixed;
  top: 0px;
  bottom: 0;
  width: 300px;
  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
  z-index: 4;
  overflow-y: scroll;
  height: 100%;
  transition: 500ms;
  transition-timing-function: cubic-bezier(.4, 0, .2, 1);
}

.Drawer.open {
	left: 0;
}

ul {
  padding-left: 0;
  margin: 0;
}

li {
  line-height: 60px;
  font-size: 0.75rem;
  font-weight: 600;
  transition: 400ms;
  white-space: nowrap;
}

.section-list-item-icon {
	width: 18px;
	position: relative;
	top: 5px;
	padding-right: 20px;
}

.section-list-item {
  padding-left: 20px;
}

.section-list-item:hover {
  padding-left: 25px;
  background-color: #eee;
}

.section-list-item.active {
  padding-left: 28px;
  background-color: #fff;
  color: #00B8D4;
  transition: 550ms;
}

.subsection-list-item {
  padding-left: 40px;
  background-color: #555;
  color: white;
}

.subsection-list-item:hover {
  padding-left: 45px;
  background-color: #4d4d4d;
}

.subsection-list-item.active {
  padding-left: 48px;
  background-color: #555;
  color: #18FFFF;
  transition: 550ms;
}

.Divider {
  height: 1px;
  background-color: #e9e9e9;
}

.Footer {
  position: fixed;
  height: 160px;
  bottom: 0;
  right: 0;
  left: 300px;
  background-color: #444;
  padding-top: 30px;
  box-sizing: border-box;
  color: #ddd;
  padding-left: 105px;
  font-size: 0.85rem;
  z-index: 2;
}

.Footer a {
	text-decoration: none;
	color: inherit;
}

.noselect {
	/* iOS Safari */
  -webkit-touch-callout: none;

	/* Safari */
  -webkit-user-select: none;

	/* Konqueror HTML */
  -khtml-user-select: none;

	/* Firefox */
  -moz-user-select: none;

	/* Internet Explorer/Edge */
  -ms-user-select: none;

	/* Non-prefixed version, currently
	supported by Chrome and Opera */
  user-select: none;
}

.progressbar {
  max-width: 560px;
  height: 4px;
  background-color: #ddd;
  border-radius: 99px;
}

.progressbar>.progress {
  background-color: #00BCD4;
  height: 100%;
  width: 0;
  border-radius: 99px;
}

.drawer-banner-wrapper {
	height: 160px;
	background-color: #f44335;
}

.drawer-banner-wrapper > .background-image {
	position: absolute;
	height: inherit;
	filter: hue-rotate(160deg) saturate(2);
}

.drawer-banner-wrapper > .profile-image {
	position: absolute;
	top: 0;
	left: 170px;
	height: inherit;
	width: auto;
}

/*Tablet*/
@media screen and (max-width: 950px) {
  .Drawer {
    left: -350px;
  }
  .Body {
    transition: 100ms;
    margin-left: 0;
  }
  .Body.drawer-open {
    transition: 300ms;
    filter: brightness(0.5) grayscale(100%);
  }
  .Header {
    transition: 300ms;
  }
  .Header, .Footer {
    left: 0;
  }
  .Header>.menu-icon {
    filter: invert(1);
    position: absolute;
    width: 35px;
    height: auto;
    margin-top: 65px;
    margin-left: 45px;
    display: initial;
  }
  .Header.drawer-open {
    transition: 300ms;
    filter: brightness(0.5) grayscale(100%);
  }
  .Card p {
    text-align: left;
  }
}

/* Mobile */
@media screen and (max-width: 600px), screen and (max-height: 550px) {
  .Body {
    margin-top: 70px;
    padding-left: 0;
    padding-right: 0;
  }
  .Card {
    margin: 15px 5px;
    padding-left: 20px;
    padding-right: 20px;
  }
  .Card h2 {
    text-align: center;
  }
  .Footer {
    text-align: center;
    padding-left: 0;
  }
  .Header h1 {
    font-size: 1.2rem;
    padding-left: 55px;
    margin-top: 24px;
  }
  .Header>.menu-icon {
    width: 30px;
    margin-top: 20px;
    margin-left: 20px;
  }
}

